kml file generation
KML file will be generated every 6 hours and server restart
